--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <a href="Glavs/Glava_(1).html" class="btn">Читать</a>
      </div>
           <h1>Оглавление</h1>
+  <pre>
                <div align="center">
                     <a href="Glavs/Glava_(1).html" class="Glava">Глава 1</a> <br>
                     <a href="Glavs/Glava_(2).html" class="Glava">Глава 2</a> <br>
